Remove LdapUser constructor optional